client/src/scss/pages/client/game.scss
/* ... */
#action-container {
    position: absolute;
    top: 30%;
    left: 50%;
    transform: translate(-50%, -50%);
    z-index: 1;

    #action-timer {
        position: relative;
        top: 25px;
        text-align: center;
        justify-content: center;
        @include variables.drop-shadow;

        #action-time {
            position: absolute;
            top: calc(30% + 10px);
            left: 50%;
            transform: translate(-50%, -50%);
            z-index: 1;
        }

        svg {
            -webkit-transform: rotate(-90deg);
            transform: rotate(-90deg);
        }
    }

    #action-name {
        background: palette.$transparent_bg;
        @include variables.text-shadow;

        text-align: center;
        align-items: center;
        justify-content: center;

        border-radius: 8px;
        padding: 10px;

        font-size: 20px;
    }

    @media screen and (max-width: variables.$screen-large) {
        display: flex;
        flex-direction: row;

        #action-timer {
            transform: scale(50%);
            top: 20px;
        }

        #action-name {
            font-size: 15px;
            padding: 5px;
            position: relative;
            right: 50px;
            top: 85px;
            height: 30px;
        }
    }
}

#interact-message {
    position: absolute;
    top: 60%;
    left: 50%;
    text-align: center;
    vertical-align: middle;
    transform: translateX(-50%);
    background-color: palette.$transparent_bg;
    padding: 8px;
    border-radius: 5px;

    @media screen and (max-height: variables.$screen_small) {
        padding: 3px 5px 3px 5px;
    }
}

#interact-key {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    vertical-align: middle;
    width: 30px;
    height: 30px;
    background-color: #eee;
    border-radius: 3px;
    border: 1px solid #b4b4b4;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2),
        0 2px 0 0 rgba(255, 255, 255, 0.7) inset;
    color: #333;
    font-size: 25px;
    font-weight: 700;
    line-height: 1;
    padding: 2px 4px;
    margin-right: 3px;
    white-space: nowrap;

    @media screen and (max-width: variables.$screen-large) {
        width: 20px;
        height: 20px;

        img {
            width: 15px;
            height: 15px;
        }
    }
}

#interact-text {
    font-size: 20px;
    position: relative;
    top: 2.5px;
    @include variables.text-shadow;

    @media screen and (max-width: variables.$screen-large) {
        font-size: 15px;
        top: 0;
    }

    @media screen and (min-width: variables.$screen_large) and (max-height: 720px) {
        top: 0;
    }
}

#interact-key.active + #interact-text {
    position: relative;
    top: 3px;

    @media screen and (max-width: variables.$screen-large) {
        top: 0.95px;
    }
}

#weapon-ammo-container {
    position: absolute;
    bottom: 91px;
    left: 50%;
    transform: translateX(-50%);
    display: flex;
    align-items: baseline;

    font-weight: bold;
    @include variables.text-shadow;

    &.has-reserve {
        left: calc(50% + 32px);

        @media screen and (max-width: variables.$screen_large) {
            left: calc(50% + 24px);
        }

        @media screen and (max-width: 425px) {
            left: calc(50% - 53px);
        }
    }

    div {
        display: flex;
        background: palette.$transparent_bg;
        text-align: center;
        align-items: center;
        justify-content: center;
    }

    @media screen and (max-width: variables.$screen_large) {
        bottom: 60px;
        left: 50%;
    }

    #weapon-clip-ammo {
        font-size: xx-large;
        width: 100px;
        height: 50px;
        border-radius: 4px;
        position: relative;

        #weapon-clip-reload-icon {
            position: absolute;
            bottom: 4px;
            right: 4px;
            font-size: 14px;
        }

        @media screen and (max-width: variables.$screen_large) {
            width: 75px;
            height: 37px;
            font-size: 22px;
        }
    }

    #weapon-inventory-ammo {
        width: 60px;
        height: 30px;
        margin-left: 5px;
        border-radius: 4px;
        margin-top: auto;
        font-size: large;

        @media screen and (max-width: variables.$screen_large) {
            width: 45px;
            height: 22px;
            font-size: 14px;
        }
    }
}
/* ... */

